# arti-gen

./: CMakeLists.txt  conanfile.txt  main.cpp
configured_files/: config.hpp.in
include/: generator.hpp  generator_template.hpp  options_parser.hpp  variable_substitutor.hpp
include/utils/: error.hpp
sample-templates-config/: config.toml
sample-templates-config/cmake-project-template/: vars.toml
src/: generator.cpp  generator_template.cpp  options_parser.cpp  variables_substitutor.cpp
